--- a/hyrisk_demo.Rmd
+++ b/hyrisk_demo.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "HYRISK tutorial: failure assessment of a coastal dyke"
-output: html_notebook
+output: 
+  html_document:
+    keep_md: true
 bibliography: refs.bib
 ---
 
